# lowdiscrepancyRR

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  mangle.cpp
cpp/ang2d/: BossMask.cpp  BossMask.h  CMakeLists.txt  ang2d.cpp  ang2d.h  boss.cpp  capintegrate.cpp  deep2.cpp  make_random.cpp  mangle.cpp  mangle.h
cpp/boss/: BossMask.cpp  BossMask.h  CMakeLists.txt  InputParams_template.cfg  ang2d.cpp  ang2d.h  boss.cpp  bossRR.cpp  bossmask_area.cpp  bossmask_template.cfg  make_random.cpp  mangle.cpp  mangle.h  mangle2.cpp  mangle2.h  test_bossmask.cpp  test_mangle.cpp  test_partition.cpp  test_program_options.cpp
cpp/boss/deprecated/: make_random.cpp  mangle.cpp
cpp/boss/gtests/: CMakeLists.txt  RR_test.cpp  area_test.cpp  hemisphere.ply  hemisphere_input.cfg  lowz.cfg  mpi_RR_test.cpp  mpi_area_test.cpp  partition_test.cpp  sphere.cfg  sphere.ply  sphere_input.cfg  test_mangle.cpp  test_rotatePoint.cpp
cpp/boss/profile/: CMakeLists.txt  mangle_compare.cpp  mangle_compare2.cpp  mangle_pixelized.cpp  rng_speed.cpp
cpp/unit3d/: CMakeLists.txt  unit3d.cpp
data/boss/: boss_geometry_2011_06_10_LOWZ-north.cfg  boss_survey.ply  hemisphere.cfg  hemisphere.out  hemisphere.ply  hemisphere_input.cfg
data/boss/lds_lowz_angular/: calc_RR.out  calc_RR.sh  calc_RR_convergence.out  calc_RR_convergence.sh  calc_area.out  calc_area.sh  calc_log_RR.out  calc_log_RR.sh  compute_area.nb  lowz_angular.dump  lowz_angular_plot1.nb  lowz_area_input.cfg  lowz_convergence_0_1.cfg  lowz_convergence_0_1.dump  lowz_convergence_10_0.cfg  lowz_convergence_10_0.dump  lowz_convergence_1_0.cfg  lowz_convergence_1_0.dump  lowz_convergence_25_0.cfg  lowz_convergence_25_0.dump  lowz_convergence_50_0.cfg  lowz_convergence_50_0.dump  lowz_input.cfg  lowz_log_angular.dump  lowz_log_input.cfg  lowz_log_input_test.cfg
data/boss/rppi/: boss+legacy_7-21_LOWZ-weight-north_0.2ltzlt0.4-xyz.N.csv
data/cap/: cap.sh.o36879  cap.sh.o37675  runner.py
data/deep2/: deep2.sh.o36880  deep2.sh.o37676  runner.py
data/deep2_prng/: deep2_prng.sh  deep2_prng.sh.o36886  deep2_prng.sh.o37677  runner.py
data/unit3d/: README  runner.py  unit3d.sh.o36559
mma/: .gitignore  LowDiscrep.m  README  RR1D.nb  RR3D.nb  ang2d.nb  capintegrate.nb  lowz-nz.nb  parejkoDR.nb  plots.m  plots.nb  rr3d.h5
python/: box_test.py  box_test_N.py  deep2_angpairs.py  deep2_data.py  do_2point_ang.sh  process_box_test.py
tex/: .gitignore  README  rr.lyx  rr.tex
tex/bib/: Npoint.bib  clustering_method.bib  lowdiscr.bib  sdss-tech.bib  sdss.bib
tex/plots/: README
